fix layout bug

--- a/src/entrypoints/buff.content/layout-fix.css
+++ b/src/entrypoints/buff.content/layout-fix.css
@@ -326,7 +326,7 @@
         padding: 30px 0 !important;
     }
 
-    .detail-tab-cont > div:nth-child(2) {
+    .detail-tab-cont > div:nth-child(2):has(+ div#tag-price-chart) {
         padding: 30px 0 !important;
         margin: 0 !important;
         margin-right: 75px !important;
